[project]
name = "fsjd"
authors = [
    { name = "Robert Duncan", email = "support@agritheory.dev"}
]
description = "Frappe Schema JSON Diff"
requires-python = ">=3.8"
readme = "README.md"

[tool.poetry.dependencies]
json-source-map  = "^1.0.4"
rich =  "^12.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
